# pybic

./: CHANGELOG.md  README.md  pyproject.toml
src/pybic/: __init__.py  bic.py  cmd.py  listener.py  utils.py
tests/: __init__.py  test_import_pybic.py
